# arbitrage

./: Cargo.toml  README.md  config.yaml
src/: analyzer.rs  auto_triangles.rs  binance_rest.rs  capture_replay.rs  config.rs  generate_config.rs  handlers.rs  main.rs  market_state.rs  models.rs  orderbook.rs  pnl_report.rs  replay_check.rs  signal_log.rs  simulator.rs  workers.rs  ws.rs
