[package]
name = "arbitrage"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
log = "0.4"
log4rs = { version = "1", features = ["background_rotation"] }
